--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
   "require": {
     "php": "^7.0",
     "elasticsearch/elasticsearch": "^2.3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Nexucis\\": "src/Nexucis/"
+    }
   }
 }
