--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "php": "^7.0",
     "elasticsearch/elasticsearch": "^2.3.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^6.4"
+  },
   "autoload": {
     "psr-4": {
       "Nexucis\\": "src/Nexucis/"
