--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,5 +34,8 @@ jobs:
             - ./vendor
           key: v1-dependencies-{{ checksum "composer.json" }}
 
+      # see if the es cluster is available
+      - run: curl -s -XGET http://localhost:9200
+
       # run tests!
       - run: vendor/bin/phpunit
