--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,4 +45,4 @@ jobs:
       - run: vendor/bin/phpunit
 
       # run coverage
-      - run: vendor/bin/coveralls
+      - run: bash <(curl -s https://codecov.io/bash)
