--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "elasticsearch/elasticsearch": "^2.3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.4",
-    "php-coveralls/php-coveralls": "^1.0"
+    "phpunit/phpunit": "^6.4"
   },
   "autoload": {
     "psr-4": {
