add autoload-dev and move tests files in a correct namespace

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
     "psr-4": {
       "Nexucis\\": "src/Nexucis/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Nexucis\\Tests\\": "tests/Nexucis/Tests"
+    }
   }
 }
