--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
       - image: circleci/php:7.1.8-browsers
     working_directory: ~/repo
     steps:
+      - checkout
       # Download and cache dependencies
       - restore_cache:
           keys:
