--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^6.4",
-    "squizlabs/php_codesniffer": "3.1.1"
+    "squizlabs/php_codesniffer": "3.1.1",
+    "phpstan/phpstan": "^0.8.5"
   },
   "autoload": {
     "psr-4": {
