--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mysql:9.4
-      - image: elasticsearch:5.5.2
+      - image: docker.elastic.co/elasticsearch/elasticsearch:6.0.0
 
     working_directory: ~/repo
 
