--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/php:7.1.8-browsers
+      - image: circleci/php:7.2.9-apache-stretch-node-browsers
       - image: docker.elastic.co/elasticsearch/elasticsearch:6.0.0
     working_directory: ~/repo
     steps:
@@ -35,7 +35,7 @@ jobs:
 
   analyze_phpcs:
     docker:
-      - image: circleci/php:7.1.8-browsers
+      - image: circleci/php:7.2.9-apache-stretch-node-browsers
     working_directory: ~/repo
     steps:
       - checkout
@@ -59,7 +59,7 @@ jobs:
 
   analyze_phpstan:
     docker:
-      - image: circleci/php:7.1.8-browsers
+      - image: circleci/php:7.2.9-apache-stretch-node-browsers
     working_directory: ~/repo
     steps:
       - checkout
