--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,9 @@ jobs:
   build:
     docker:
       - image: circleci/php:7.2.9-apache-stretch-node-browsers
-      - image: docker.elastic.co/elasticsearch/elasticsearch:7.0.0
+      - image: docker.elastic.co/elasticsearch/elasticsearch:7.1.1
+        environment:
+          - discovery.type=single-node
     working_directory: ~/repo
     steps:
       - checkout
