--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     }
   ],
   "require": {
-    "php": "^7.1",
+    "php": "^7.1 | ^8.0",
     "elasticsearch/elasticsearch": "^7.0.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.4",
+    "phpunit/phpunit": "^6.5.14 | ^7.5.20 | ^8.5.8 | ^9.3.8",
     "squizlabs/php_codesniffer": "3.1.1",
     "phpstan/phpstan": "^0.8.5"
   },
