--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "elasticsearch/elasticsearch": "^7.0.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.5.14 | ^7.5.20 | ^8.5.8 | ^9.3.8",
+    "phpunit/phpunit": "^7.5.20 | ^9.3.8",
     "squizlabs/php_codesniffer": "3.1.1",
     "phpstan/phpstan": "^0.8.5"
   },
