--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "require-dev": {
     "phpunit/phpunit": "^7.5.20 | ^9.3.8",
     "squizlabs/php_codesniffer": "3.1.1",
-    "phpstan/phpstan": "^0.8.5"
+    "phpstan/phpstan": "^0.12.77"
   },
   "autoload": {
     "psr-4": {
@@ -31,6 +31,6 @@
   "scripts": {
     "test": "./vendor/bin/phpunit",
     "lint": "./vendor/bin/phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4",
-    "analyse": "./vendor/bin/phpstan analyse --level 7 -c phpstan.neon"
+    "analyse": "./vendor/bin/phpstan analyse --level 7 -c phpstan.neon src/"
   }
 }
