--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   "require-dev": {
     "phpunit/phpunit": "^7.5.20 | ^9.3.8",
     "squizlabs/php_codesniffer": "3.1.1",
-    "phpstan/phpstan": "^0.12.77"
+    "phpstan/phpstan": "^0.12.77",
+    "yoast/phpunit-polyfills": "^0.2.0"
   },
   "autoload": {
     "psr-4": {
