--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5.20 | ^9.3.8",
-    "squizlabs/php_codesniffer": "3.1.1",
+    "squizlabs/php_codesniffer": "3.5.8",
     "phpstan/phpstan": "^0.12.77",
     "yoast/phpunit-polyfills": "^0.2.0"
   },
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "test": "./vendor/bin/phpunit",
-    "lint": "./vendor/bin/phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4",
+    "lint": "./vendor/bin/phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -v src/ tests/",
     "analyse": "./vendor/bin/phpstan analyse --level 7 -c phpstan.neon src/"
   }
 }
