--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,11 @@
-version: 2
+version: 2.1
 jobs:
   build:
+    parameters:
+      php-versions:
+        type: string
     docker:
-      - image: circleci/php:7.2.9-apache-stretch-node-browsers
+      - image: circleci/php:<< parameters.php-versions >>-apache-buster-node-browsers
       - image: docker.elastic.co/elasticsearch/elasticsearch:7.1.1
         environment:
           - discovery.type=single-node
@@ -26,6 +29,7 @@ jobs:
       - run: .circleci/wait_es_up.sh
 
       # enable xdebug
+      - run: echo -e "xdebug.mode = coverage" | sudo tee /usr/local/etc/php/php.ini > /dev/null
       - run: sudo ln -s /etc/php/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
       - run: php --ini
 
@@ -37,7 +41,7 @@ jobs:
 
   analyze_phpcs:
     docker:
-      - image: circleci/php:7.2.9-apache-stretch-node-browsers
+      - image: circleci/php:7.4-apache-buster-node-browsers
     working_directory: ~/repo
     steps:
       - checkout
@@ -61,7 +65,7 @@ jobs:
 
   analyze_phpstan:
     docker:
-      - image: circleci/php:7.2.9-apache-stretch-node-browsers
+      - image: circleci/php:7.4-apache-buster-node-browsers
     working_directory: ~/repo
     steps:
       - checkout
@@ -80,7 +84,7 @@ jobs:
           key: v1-dependencies-{{ checksum "composer.json" }}
 
       # run code analyzer
-      - run: composer analyse src tests
+      - run: composer analyse
   analyze_eol:
     docker:
       - image: nexucis/ci-checkfiles
@@ -97,20 +101,23 @@ jobs:
       - checkout
       - run: checkEncoding utf-8 *.php *.md *.xml *.sh composer.json phpstan.neon
 
+
 workflows:
-  version: 2
-  build_and_analyze:
-    jobs:
-      - build
-      - analyze_phpcs:
-          requires:
-            - build
-      - analyze_phpstan:
-          requires:
-            - build
-      - analyze_eol:
-          requires:
-            - build
-      - analyze_encoding_utf8:
-          requires:
-            - build
+    build_and_analyze:
+        jobs:
+            - build:
+                  matrix:
+                      parameters:
+                          php-versions: ["7.1", "7.2", "7.3", "7.4", "8.0"]
+            - analyze_phpcs:
+                requires:
+                    - build
+            - analyze_phpstan:
+                requires:
+                    - build
+            - analyze_eol:
+                  requires:
+                    - build
+            - analyze_encoding_utf8:
+                requires:
+                    - build
