--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
     }
   ],
   "require": {
-    "php": "^7.1",
+    "php": "^7.1 | ^8.0",
     "elasticsearch/elasticsearch": "^7.0.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.4",
-    "squizlabs/php_codesniffer": "3.1.1",
-    "phpstan/phpstan": "^0.8.5"
+    "phpunit/phpunit": "^7.5.20 | ^9.3.8",
+    "squizlabs/php_codesniffer": "3.5.8",
+    "phpstan/phpstan": "^0.12.77",
+    "yoast/phpunit-polyfills": "^0.2.0"
   },
   "autoload": {
     "psr-4": {
@@ -30,7 +31,7 @@
   },
   "scripts": {
     "test": "./vendor/bin/phpunit",
-    "lint": "./vendor/bin/phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4",
-    "analyse": "./vendor/bin/phpstan analyse --level 7 -c phpstan.neon"
+    "lint": "./vendor/bin/phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -v src/ tests/",
+    "analyse": "./vendor/bin/phpstan analyse --level 7 -c phpstan.neon src/"
   }
 }
