--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ workflows:
             - build:
                   matrix:
                       parameters:
-                          php-versions: ["7.1", "7.2", "7.3", "7.4", "8.0"]
+                          php-versions: ["7.1", "7.2", "7.3", "7.4", "8.0", "8.1"]
             - analyze_phpcs:
                 requires:
                     - build
