--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": "^7.1 | ^8.0",
-    "elasticsearch/elasticsearch": "^7.0.1"
+    "elasticsearch/elasticsearch": "^7.0.1 | ^8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5.20 | ^9.3.8",
